--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <title>Social App</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="http://localhost:3000/assets/style.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
